Add active class for tab highlighting

--- a/styles.css
+++ b/styles.css
@@ -13,6 +13,7 @@ header {
 nav ul {
     list-style-type: none;
     padding: 0;
+    text-align: center;
 }
 nav ul li {
     display: inline;
@@ -21,15 +22,20 @@ nav ul li {
 nav ul li a {
     color: white;
     text-decoration: none;
+    padding: 5px 10px;
+    border-radius: 5px;
+    transition: background-color 0.3s, color 0.3s;
+}
+nav ul li a:hover,
+nav ul li a.active {
+    background-color: gold;
+    color: black;
 }
 section {
     padding: 2em;
     background-color: white;
     margin: 1em;
     border-radius: 8px;
-}
-.visualization {
-    margin-top: 1em;
 }
 footer {
     text-align: center;
