--- a/styles.css
+++ b/styles.css
@@ -13,7 +13,6 @@ header {
 nav ul {
     list-style-type: none;
     padding: 0;
-    text-align: center;
 }
 nav ul li {
     display: inline;
@@ -24,10 +23,8 @@ nav ul li a {
     text-decoration: none;
     padding: 5px 10px;
     border-radius: 5px;
-    transition: background-color 0.3s, color 0.3s;
 }
-nav ul li a:hover,
-nav ul li a.active {
+nav ul li a.active, nav ul li a:hover {
     background-color: gold;
     color: black;
 }
