--- a/styles.css
+++ b/styles.css
@@ -9,10 +9,16 @@ header {
     color: white;
     padding: 1em;
     text-align: center;
+    position: sticky;
+    top: 0;
+    z-index: 1000;
 }
 nav ul {
     list-style-type: none;
     padding: 0;
+    display: flex;
+    justify-content: center; 
+    align-items: center; 
 }
 nav ul li {
     display: inline;
