--- a/styles.css
+++ b/styles.css
@@ -40,9 +40,41 @@ section {
     margin: 1em;
     border-radius: 8px;
 }
+
 footer {
     text-align: center;
     padding: 1em;
     background-color: #333;
     color: white;
+}
+
+.team-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+}
+
+.team-member {
+    background-color: #e0e0e0;
+    border-radius: 8px;
+    text-align: center;
+    padding: 20px;
+    margin: 10px;
+    width: 200px;
+}
+
+.team-member img {
+    border-radius: 50%;
+    width: 100px;
+    height: 100px;
+}
+
+.team-member h3 {
+    margin: 10px 0 5px 0;
+}
+
+.team-member a {
+    text-decoration: none;
+    color: #0073b1;
+    font-weight: bold;
 }
