--- a/styles.css
+++ b/styles.css
@@ -30,7 +30,7 @@ nav ul li a {
     padding: 5px 10px;
     border-radius: 5px;
 }
-nav ul li a.active, nav ul li a:hover {
+nav ul li a.active {
     background-color: gold;
     color: black;
 }
