--- a/styles.css
+++ b/styles.css
@@ -48,33 +48,61 @@ footer {
     color: white;
 }
 
+#team {
+    text-align: center;
+    padding: 2em 0;
+}
+
+#team h2 {
+    font-size: 2em;
+    margin-bottom: 0.5em;
+}
+
+#team p {
+    font-size: 1.2em;
+    color: #555;
+    margin-bottom: 2em;
+}
+
 .team-container {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-around;
+    justify-content: center;
 }
 
 .team-member {
-    background-color: #e0e0e0;
-    border-radius: 8px;
+    background-color: #f4f4f4;
+    border-radius: 10px;
     text-align: center;
-    padding: 20px;
-    margin: 10px;
+    padding: 1em;
+    margin: 1em;
     width: 200px;
+    transition: transform 0.3s;
+}
+
+.team-member:hover {
+    transform: scale(1.05);
 }
 
 .team-member img {
     border-radius: 50%;
-    width: 100px;
-    height: 100px;
+    width: 150px;
+    height: 150px;
+    margin-bottom: 1em;
 }
 
 .team-member h3 {
-    margin: 10px 0 5px 0;
+    margin: 0.5em 0;
+    font-size: 1.2em;
 }
 
-.team-member a {
-    text-decoration: none;
-    color: #0073b1;
-    font-weight: bold;
+.team-member p {
+    margin: 0.5em 0;
+    color: #777;
+}
+
+.linkedin-icon {
+    width: 30px;
+    height: 30px;
+    margin-top: 1em;
 }
