--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,7 @@ body {
     padding: 0;
     background-color: #f4f4f4;
 }
+
 header {
     background-color: #333;
     color: white;
@@ -13,27 +14,32 @@ header {
     top: 0;
     z-index: 1000;
 }
+
 nav ul {
     list-style-type: none;
     padding: 0;
     display: flex;
-    justify-content: center; 
-    align-items: center; 
+    justify-content: center; /* Center the navigation items */
+    align-items: center; /* Align the items vertically */
 }
+
 nav ul li {
     display: inline;
     margin-right: 10px;
 }
+
 nav ul li a {
     color: white;
     text-decoration: none;
-    padding: 5px 10px;
-    border-radius: 5px;
 }
+
 nav ul li a.active {
     background-color: gold;
+    padding: 5px;
+    border-radius: 5px;
     color: black;
 }
+
 section {
     padding: 2em;
     background-color: white;
@@ -41,27 +47,15 @@ section {
     border-radius: 8px;
 }
 
+section h2 {
+    text-align: center; /* Center align section headings */
+}
+
 footer {
     text-align: center;
     padding: 1em;
     background-color: #333;
     color: white;
-}
-
-#team {
-    text-align: center;
-    padding: 2em 0;
-}
-
-#team h2 {
-    font-size: 2em;
-    margin-bottom: 0.5em;
-}
-
-#team p {
-    font-size: 1.2em;
-    color: #555;
-    margin-bottom: 2em;
 }
 
 .team-container {
