--- a/styles.css
+++ b/styles.css
@@ -105,3 +105,10 @@ footer {
     border: none; /* Remove border from LinkedIn icon */
     box-shadow: none; /* Remove shadow from LinkedIn icon */
 }
+
+.team-subtitle {
+    text-align: center;
+    font-size: 1.2em;
+    color: #555;
+    margin-bottom: 1em;
+}
