--- a/styles.css
+++ b/styles.css
@@ -113,6 +113,39 @@ footer {
     margin-bottom: 1em;
 }
 
+/* Home Video Section */
+#home {
+    position: relative;
+    width: 100%;
+    height: 100vh;
+    overflow: hidden;
+}
+
+#homeVideo {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+#home .overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background: rgba(0, 0, 0, 0.5);
+    color: white;
+    text-align: center;
+    padding: 1em;
+}
+
 /* Contact Us Section */
 #contact {
     background-color: #333;
@@ -141,7 +174,7 @@ footer {
     flex-direction: column;
 }
 
-.contact-container input,
+contact-container input,
 .contact-container textarea {
     margin-bottom: 1em;
     padding: 1em;
