--- a/styles.css
+++ b/styles.css
@@ -122,10 +122,16 @@ footer {
     padding-top: 80px; /* Increase padding to avoid header overlap */
 }
 
-#homeVideo {
+.video-container {
     position: absolute;
     top: 0;
     left: 0;
+    width: 50%; /* Adjust the width of the video */
+    height: 100%;
+    overflow: hidden;
+}
+
+#homeVideo {
     width: 100%;
     height: 100%;
     object-fit: cover;
@@ -134,8 +140,8 @@ footer {
 #home .overlay {
     position: absolute;
     top: 0;
-    left: 0;
-    width: 100%;
+    left: 50%; /* Align the overlay to the right of the video */
+    width: 50%;
     height: 100%;
     display: flex;
     flex-direction: column;
