--- a/styles.css
+++ b/styles.css
@@ -122,16 +122,10 @@ footer {
     padding-top: 80px; /* Increase padding to avoid header overlap */
 }
 
-.video-container {
+#homeVideo {
     position: absolute;
     top: 0;
     left: 0;
-    width: 50%; /* Adjust the width of the video */
-    height: 100%;
-    overflow: hidden;
-}
-
-#homeVideo {
     width: 100%;
     height: 100%;
     object-fit: cover;
@@ -140,8 +134,8 @@ footer {
 #home .overlay {
     position: absolute;
     top: 0;
-    left: 50%; /* Align the overlay to the right of the video */
-    width: 50%;
+    left: 0;
+    width: 100%;
     height: 100%;
     display: flex;
     flex-direction: column;
