Add team members to the Our Team section

--- a/styles.css
+++ b/styles.css
@@ -10,9 +10,15 @@ header {
     color: white;
     padding: 1em;
     text-align: center;
-    position: sticky;
+    position: fixed;
+    width: 100%;
     top: 0;
     z-index: 1000;
+}
+
+header h1 {
+    margin: 0;
+    font-size: 1.5em;
 }
 
 nav ul {
