--- a/styles.css
+++ b/styles.css
@@ -152,6 +152,10 @@ footer {
     padding: 1em;
 }
 
+#home .overlay p {
+    font-size: 2em; /* Adjust this value to achieve the desired text size */
+}
+
 #contact {
     background-color: #333;
     color: white;
